Add accelerate package for model loading with device_map

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ torchvision>=0.15.0
 
 # HuggingFace Transformers
 transformers==4.47.1
+accelerate>=0.26.0
 hf_transfer>=0.1.9
 
 # DeepSeek-OCR Model Dependencies
